--- a/analysis/study2.qmd
+++ b/analysis/study2.qmd
@@ -312,10 +312,6 @@ data <- rbind(
   make_rez(with = "TAS_DDF", component="Alexithymia", name = "Difficulties Describing Feelings (TAS)"),
   make_rez(with = "TAS_EOT", component="Alexithymia", name = "External Thinking (TAS)"),
 
-  #df3
-  make_rez(with = "TAS_DescribingFeelings", component="Alexithymia", name = "Difficulties Describing Feelings (TAS)"),
-  make_rez(with = "TAS_IdentifyingFeelings", component="Alexithymia", name ="Difficulties Identifying Feelings (TAS)"), 
-  make_rez(with = "TAS_ExternallyOrientedThinking", component="Alexithymia", name = "External Thinking (TAS)"), 
   make_rez(with = "TAS_des", component="Alexithymia", name = "Difficulties Describing Feelings (TAS)"), 
   make_rez(with = "TAS_ident", component="Alexithymia", name = "Difficulties Identifying Feelings (TAS)"), 
   make_rez(with = "TAS_ext", component="Alexithymia", name = "External Thinking (TAS)"), 
@@ -339,14 +335,11 @@ data <- rbind(
 
 data <- rbind(
   data,
-  make_rez(with = "PHQ2_sum", component="Mood", name = "Depression (PHQ-2)"),
+  make_rez(with = "PHQ2_Sum", component="Mood", name = "Depression (PHQ-2)"),
   make_rez(with = "PHQ15_Sum", component="Mood", name = "Somatic Concerns (PHQ-15)"), 
   make_rez(with = "PHQ9_Sum", component="Mood", name = "Depression (PHQ-9)"), 
-  make_rez(with = "BDI_sum", component="Mood", name = "Depression (BDI)"), 
-  make_rez(with = "PHQ15_sum", component="Mood", name = "Somatic Concerns (PHQ-15)"), 
-  make_rez(with = "PHQ9_sum", component="Mood", name = "Depression (PHQ-9)"), 
+  make_rez(with = "BDI_Sum", component="Mood", name = "Depression (BDI)"), 
   make_rez(with = "PHQ4_Depression", component="Mood", name = "Depression (PHQ-2)"),
-  make_rez(with = "BDI2_Total", component="Mood", name = "Depression (BDI)"),
   make_cor(with = "DEP", component = "Mood", name = "Depression (MFQ)")
 )
 ```
@@ -358,20 +351,18 @@ data <- rbind(
 # names(df7a)[str_detect(names(df7a), "STAI")] 
 # names(df7b)[str_detect(names(df7b), "STAI")] 
 # names(df7c)[str_detect(names(df7c), "STAI")]
+# names(df10)[]
 # names(df11)[str_detect(names(df11), "STAI")] 
 # names(df14)[str_detect(names(df14), "ANX")] # anx = stai-t
 
 
 data <- rbind(
   data,
-  make_rez(with = "GAD2_sum", component="Mood", name = "Anxiety (GAD-2)"), 
-  make_rez(with = "STAI_T_Sumscore", component="Mood", name= "Anxiety (STAI-T)"), 
+  make_rez(with = "GAD2_Sum", component="Mood", name = "Anxiety (GAD-2)"), 
   make_rez(with = "STAIT_Sum", component="Mood", name = "Anxiety (STAI-T)"), 
-  make_rez(with = "STAIT_sum", component="Mood", name = "Anxiety (STAI-T)"),
-  make_rez(with = "PHQ4_Anxiety", component="Mood", name = "Anxiety (GAD-2)"),
-  make_rez(with = "PHQ4_Anxiety", component="Mood", name = "Anxiety (STAI-5)"), 
-  make_rez(with = "STAI5_General", component="Mood", name = "Anxiety (STAI-T)"),
-  make_rez(with =  "ANX", component = "Mood", name = "Anxiety (STAI-T)")
+  make_rez(with = "PHQ4_Anxiety", component="Mood", name = "Anxiety (PHQ-4)"),
+  # make_rez(with = "PHQ4_Anxiety", component="Mood", name = "Anxiety (STAI-5)"),
+  make_rez(with = "GAD7_Sum", component="Mood", name = "Anxiety (GAD-9)")
 )
 ```
 
