--- a/analysis/Study1.qmd
+++ b/analysis/Study1.qmd
@@ -222,7 +222,9 @@ df7b <- haven::read_sav("../data/Brand2023/Data_Mainz.sav") |>
     MAIA_SelfReg = maiaSelfRegulation, MAIA_BodyListening = maiaBodyListening,
     MAIA_Trusting = maiaTrusting, MAIA_EmoAwareness = maiaEmotionalAwareness,
     BPQ_BodyAwareness =BPQ_Sum) |> 
-  mutate(across(starts_with("MAIA_"), \(x) datawizard::rescale(x, to = c(0, 5), range = c(1, 5)))) # Original scale 1-5
+  mutate(across(starts_with("MAIA_"), \(x) datawizard::rescale(x, to = c(0, 5), range = c(1, 5))),# Original scale 1-5
+         across(starts_with("PHQ15_"), \(x) datawizard::rescale(x, to = c(0,2), range =c(1,3))),
+          across(starts_with("PHQ9_"), \(x) datawizard::rescale(x, to = c(0,3), range =c(1,4)))) 
   
   
 df7c <- haven::read_sav("../data/Brand2023/Data_PotVie.sav") |> 
@@ -331,7 +333,7 @@ df10 <- read.csv("https://raw.githubusercontent.com/RealityBending/IllusionGameR
     MAIA_SelfReg = MAIA_SelfRegulation,
   ) |>
   filter(!is.na(Urinate)) |> 
-  datawizard::rescale(select=ias_vars, to = c(0, 5), range = c(0, 1)) |> 
+  datawizard::rescale(select=ias_vars, to = c(1, 5), range = c(0, 1)) |> 
   mutate(across(starts_with("MAIA_"), \(x) datawizard::rescale(x, to = c(0, 5)))) 
 ```
 
@@ -346,7 +348,6 @@ df11  <- read.csv("https://raw.githubusercontent.com/DominiqueMakowski/PHQ4R/mai
     Muscles = IAS_15, Bruise = IAS_16, Pain = IAS_17, Blood_Sugar = IAS_18,
     Affective_touch = IAS_19, Tickle = IAS_20, Itch = IAS_21,
     typeSample = Sample,
-    STAIT_Sum = STAI5_General,
     BDI_Sum = BDI2_Total
   ) |>
   mutate(
@@ -359,7 +360,10 @@ df11  <- read.csv("https://raw.githubusercontent.com/DominiqueMakowski/PHQ4R/mai
     MAIA2_NotWorrying_1_R = 1 - MAIA2_NotWorrying_1_R,
     MAIA2_NotWorrying_2_R = 1 - MAIA2_NotWorrying_2_R,
     MAIA2_NotWorrying_5_R = 1 - MAIA2_NotWorrying_5_R) |> 
-  datawizard::rescale(select=ias_vars, to = c(0, 5), range = c(0, 1)) 
+  mutate(across(starts_with("MAIA2_"), \(x) datawizard::rescale(x, to = c(0, 5))))  |>
+  datawizard::rescale(select=ias_vars, to = c(1, 5), range = c(0, 1)) 
+
+
 
 # Compute subscales
 
@@ -372,7 +376,7 @@ df11$MAIA_NotWorrying<- rowMeans(select(df11 , starts_with("MAIA2_NotWorrying"))
 df11$MAIA_SelfReg<- rowMeans(select(df11 , starts_with("MAIA2_SelfRegulation")))
 df11$MAIA_Trusting<- rowMeans(select(df11 , starts_with("MAIA2_Trusting")))
 
-df11 <- mutate(df11, across(starts_with("MAIA_"), \(x) datawizard::rescale(x, to = c(0, 5)))) 
+
 
 ```
 
@@ -392,7 +396,7 @@ df12  <- read.csv("https://raw.githubusercontent.com/RealityBending/Interoceptio
     MAIA_SelfReg = MAIA_SelfRegulation
   ) |>
   filter(!is.na(Heart)) |>  # participant is outlier and had total IAS scores below 0.4 
-  datawizard::rescale(select=ias_vars, to = c(0, 5), range = c(0, 1)) |> 
+  datawizard::rescale(select=ias_vars, to = c(1, 5), range = c(0, 1)) |> 
   mutate(across(starts_with("MAIA_"), \(x) datawizard::rescale(x, to = c(0, 5)))) 
 ```
 
@@ -419,7 +423,10 @@ df13  <- read.csv("https://raw.githubusercontent.com/RealityBending/Interoceptio
     MAIA_NotDistracting_6_R = 1 - MAIA_NotDistracting_6_R,
     MAIA_NotWorrying_1_R = 1 - MAIA_NotWorrying_1_R,
     MAIA_NotWorrying_2_R = 1 - MAIA_NotWorrying_2_R,
-    MAIA_NotWorrying_5_R = 1 - MAIA_NotWorrying_5_R)
+    MAIA_NotWorrying_5_R = 1 - MAIA_NotWorrying_5_R) |>
+    mutate(across(starts_with("MAIA_"), \(x) datawizard::rescale(x, to = c(0, 5)))) 
+
+  
 
 # Compute subscales
 df13$MAIA_AttentionReg <- rowMeans(select(df13 , starts_with("MAIA_Attention")))
